infrastructure/ansible/ctfd/challange-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-web-game
  namespace: ctfd
  labels:
    app: ctfd-web-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-web-game
  template:
    metadata:
      labels:
        app: ctfd-web-game
    spec:
      imagePullSecrets:
        - name: gitlab-registry

      containers:
        - name: ctfd-web-game
          image: registry.gitlab.com/it-factory-thomas-more/skil3/25-26/bsides-ctf/challenges/a3/high-score-massacre-a3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-web-shop
  namespace: ctfd
  labels:
    app: ctfd-web-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-web-shop
  template:
    metadata:
      labels:
        app: ctfd-web-shop
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: ctfd-web-shop
          image: registry.gitlab.com/it-factory-thomas-more/skil3/25-26/bsides-ctf/challenges/a3/webshop-a3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: storage-volume
              mountPath: /var/www/html/storage
            - name: database-volume
              mountPath: /var/www/html/database
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: ctfd-web-shop-storage
        - name: database-volume
          persistentVolumeClaim:
            claimName: ctfd-web-shop-database


---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-web-game-service
  namespace: ctfd
spec:
  selector:
    app: ctfd-web-game
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-web-shop-service
  namespace: ctfd
spec:
  selector:
    app: ctfd-web-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-web-game-db
  namespace: ctfd
  labels:
    app: ctfd-web-game-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-web-game-db
  template:
    metadata:
      labels:
        app: ctfd-web-game-db
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "game", "-d", "game_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: ctfd-web-game-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-web-game-db-service
  namespace: ctfd
spec:
  type: ClusterIP
  selector:
    app: ctfd-web-game-db
  ports:
    - port: 5432
      targetPort: 5432
