infrastructure/ansible/ctfd/deployment-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd-ingress
  namespace: ctfd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.example.com
      secretName: wildcard-tls
  rules:
    - host: "ctf.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctfd
                port:
                  number: 80
              
---
 apiVersion: v1
kind: Namespace
metadata:
  name: per-user
