infrastructure/ansible/ctfd/deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd-ingress
  namespace: ctfd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.banaantje.be"
      secretName: wildcard-tls
  rules:
    - host: "ctf.banaantje.be"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctfd
                port:
                  number: 80
